--- a/post.html
+++ b/post.html
@@ -7,8 +7,8 @@ layout: post
 <ul>
     {% for posts in site.categories.posts %}
       <li>
-        <a href="{{site.baseurl}}{{posts.url}}">{{posts.title}}</a>
-        <p>{{posts.meta}}</p>
+        <a href="{{site.baseurl}}{{posts.url}}">{{posts.title}}</a> 
+          <!--- <p>{{posts.desription}}</p>-->       
       </li>
     {% endfor %}
 </ul>
